finished light mode, fix pagination not having any styling, add underlying code for more themes, add early tokyo stylesheet, add splaceholder icons for more themes, fix light theme issues, made light theme css code more readable, made more colors into variables, and other small fixes

--- a/src/index.scss
+++ b/src/index.scss
@@ -94,10 +94,10 @@ hr {
 }
 
 .primary{
-  color:#B8B8B8;
+  color: var(--primaryText);
 }
 .secondary{
-  color:#ffffff6f;
+  color:var(--secondaryText);
 }
 
 .edit{
